--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,6 +4,10 @@ body,
   height: 100%;
 }
 
+li {
+  list-style-type: none;
+}
+
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0px;
